tests/paczka1/fuzzy1/25201715.err
Error in line 2: 2XDJ28QgVg S241 63,4
Error in line 4: 2XDJ28QgVg A797 12,4
Error in line 6: A658 A229 41,9
Error in line 9: 2XDJ28QgVg A797 26,6
Error in line 21: A#58 A#58 111,2
Error in line 19: 9QLyhnz A658 296,8
Error in line 30: 8iau87WSpB S241 97,6
